# ffplayer

./: Android.mk  AndroidManifest.xml  README.md  default.properties  readme
jni/jni/: Android.mk  android_audioopensles_render.cpp  android_audioopensles_render.h  android_audiotrack_render.cpp  android_audiotrack_render.h  android_liveplayer.cpp  android_liveplayer.h  android_liveplayerlistener.cpp  android_liveplayerlistener.h  android_nativewindow_render.cpp  android_nativewindow_render.h  android_stub_render.cpp  android_stub_render.h  android_videosurface_render.cpp  android_videosurface_render.h  liveplayer.cpp  readme.txt
jni/libcpuinfo/: Android.mk  cpu-features.c  cpu-features.h
jni/libffmpeg/: Android.mk  av.mk  config.fate  config.h  config.mak  ffmpeg.c  (+7 more)
jni/libutils/: Android.mk  CMakeLists.txt  util_argument.cpp  util_argument.h  util_cmdline.cpp  util_cmdline.h  util_crc32.cpp  util_crc32.cpp_bak  util_crc32.h  util_crc32.h_bak  util_disk.cpp  util_disk.h  util_eventloop.cpp  util_eventloop.h  util_file.cpp  util_file.h  util_folder.cpp  util_folder.h  util_format.cpp  util_format.h  util_fsinfo.cpp  util_fsinfo.h  util_lock.cpp  util_lock.h  util_log.cpp  util_log.h  util_log4cpp.cpp  util_log4cpp.h  util_log_android.cpp  util_log_android.h  util_log_v1.cpp  util_log_v1.h  util_log_v2.cpp  util_log_v2.h  util_md5sum.cpp  util_md5sum.h  util_network.cpp  util_network.h  util_ringbuffer.cpp  util_ringbuffer.h  (+10 more)
jni/libutils/config/: stl_config.h
jni/libutils/test/: CMakeLists.txt  crc.txt  test_crc32.cpp  test_fsinfo.cpp  test_md5.cpp  test_timer.cpp
(+231 files in other folders)
